# ufbx-write

./: README.md  ufbx_write.c  ufbx_write.h
.github/: codecov.yml
.github/workflows/: ci.yml
extra/: ufbxw_cpp_threads.h  ufbxw_fmtlib.h  ufbxw_libdeflate.h  ufbxw_to_chars.h  ufbxw_zlib.h
misc/: check_dataset.py  generate_lcov.sh  lcovrc  llvm_gcov.sh  uncrustify.cfg
misc/status/: dataset_progress.md
test/: CMakeLists.txt
test/compare_fbx/: compare_fbx.cpp  compare_fbx.h
test/extra/: CMakeLists.txt
test/roundtrip/: roundtrip.c
test/test/: all_tests.h  test_api.h  test_basic.h  test_bone.h  test_cache.h  test_collection.h  test_errors.h  test_material.h  test_texture.h
